// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
"<label class=\\"nextui-radio\\" aria-checked=\\"false\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point mock\\"></span>Option</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label>"
`;

exports[`Radio should support react-node in description 1`] = `
"<div><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>Option</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>Option 1</span><span class=\\"nextui-radio-description\\">Description for Option1<style>
        .nextui-radio-description {
          color: #666;
          font-size: calc(var(--radio-size) * 0.85);
          padding-left: calc(var(--radio-size) + var(--radio-size) * 0.375);
        }
      </style></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>Option 1</span><span class=\\"nextui-radio-description\\"><b>Description</b> for Option1<style>
        .nextui-radio-description {
          color: #666;
          font-size: calc(var(--radio-size) * 0.85);
          padding-left: calc(var(--radio-size) + var(--radio-size) * 0.375);
        }
      </style></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label></div>"
`;

exports[`Radio should work correctly with different sizes 1`] = `
"<div><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>mini</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 14px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>small</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 16px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>medium</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>large</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 24px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>xlarge</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 28px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>custom</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 24px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label></div>"
`;

exports[`Radio should work with different colors 1`] = `
"<div><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-secondary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-success);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-warning);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: #333;
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-error);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label></div>"
`;

exports[`Radio should work with different textColors 1`] = `
"<div><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-primary);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-secondary);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-success);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-warning);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span></span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-error);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: #eaeaea;
        }
      </style></label></div>"
`;
